Fri Jun 11 10:50:25 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/CoherentWriter/Receiver/CoherentWrite_Test_Receiver_exec.cpp:
        * connectors/dds4ccm/tests/CoherentWriter/Sender/CoherentWrite_Test_Sender_exec.cpp:
        * connectors/dds4ccm/tests/QueryCondition/ReadGet/Receiver/ReadGet_Test_Receiver_exec.cpp:
        * connectors/dds4ccm/tests/QueryCondition/ReadGet/Sender/ReadGet_Test_Sender_exec.cpp:
        * connectors/dds4ccm/tests/QueryCondition/StateListener/Sender/QCLS_Test_Sender_exec.cpp:
          Added some missing header files.

Fri Jun 11 10:48:40 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/ami4ccm/tests/AsynchT/Base/AsynchT.mpc:
        * connectors/ami4ccm/tests/DelReplyH/Base/DelReplyH.mpc:
        * connectors/ami4ccm/tests/Exceptions/Base/ExceptionT.mpc:
        * connectors/ami4ccm/tests/IDL_Test/AMI4CCM_IDLTest.mpc:
        * connectors/ami4ccm/tests/InterInArgs/Base/InterInArgsT.mpc:
        * connectors/ami4ccm/tests/InterMulti/Base/InterMulti.mpc:
        * connectors/ami4ccm/tests/InterOutArgs/Base/InterOutArgsT.mpc:
        * connectors/ami4ccm/tests/InterReturn/Base/InterReturnT.mpc:
        * connectors/ami4ccm/tests/NoReplyH/Base/NoReplyH.mpc:
        * connectors/ami4ccm/tests/OneProcess/Base/OneProcess.mpc:
        * connectors/ami4ccm/tests/OneReplyH/Base/OneReplyH.mpc:
        * connectors/ami4ccm/tests/UsesMulti/Base/UsesMulti.mpc:
          Added anytypecode as base project when compiling the A.idl file

Fri Jun 11 09:57:46 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/CoherentUpdater/Receiver/CoherentUpdate_Test_Receiver_exec.h:
        * connectors/dds4ccm/tests/CoherentUpdater/Receiver/CoherentUpdate_Test_Receiver_exec.cpp:
        * connectors/dds4ccm/tests/CoherentUpdater/Sender/CoherentUpdate_Test_Sender_exec.h:
        * connectors/dds4ccm/tests/CoherentUpdater/Sender/CoherentUpdate_Test_Sender_exec.cpp: